ui/core UI.Locker styles fix to make it overflow in tiny spaces

--- a/ui/core/main.sass
+++ b/ui/core/main.sass
@@ -216,6 +216,7 @@
   float:      none
   z-index:    99999
   text-align: center
+  overflow:   hidden
 
   > .lui-aligner
     display: inline-block
